--- a/assignment1/Makefile
+++ b/assignment1/Makefile
@@ -1,12 +1,8 @@
 TARGET	= libmatmult.so
-<<<<<<< HEAD
-LIBSRCS	= matmult_mkn.c matmult_nmk.c matmult_nkm.c matmult_knm.c matmult_kmn.c matmult_nat.c  matmult_lib.c
-=======
-LIBSRCS	= matmult_nat.c matmult_lib.c matmult_kmn.c
->>>>>>> b4b6c96db473fa790d2a7fb20304c89e1ab077e7
+LIBSRCS	= matmult_mnk.c matmult_mkn.c matmult_nmk.c matmult_nkm.c matmult_knm.c matmult_kmn.c matmult_nat.c  matmult_lib.c
 LIBOBJS	= $(LIBSRCS:.c=.o)
 
-OPT	= -g 
+OPT	= -g -O3
 PIC	= -fPIC
 
 CC	= gcc
