delete unecessary files

--- a/assignment1/Makefile
+++ b/assignment1/Makefile
@@ -1,7 +1,5 @@
 TARGET	= libmatmult.so
-LIBSRCS	= matmult_nat.c matmult_lib.c matmult_blk.c 
-			matmult_mnk.c matmult_mkn.c matmult_nmk.c
-			matmult_nkm.c matmult_kmn.c matmult_knm.c
+LIBSRCS	= matmult_nat.c matmult_lib.c matmult_blk.c matmult_mnk.c matmult_mkn.c matmult_nmk.c matmult_nkm.c matmult_kmn.c matmult_knm.c
 LIBOBJS	= $(LIBSRCS:.c=.o)
 
 OPT	= -g -O3
