--- a/assignment3/matrix_gpu/Makefile
+++ b/assignment3/matrix_gpu/Makefile
@@ -1,7 +1,7 @@
 TARGET	= libmatmult.so
 LIBSRCS	= 
 LIBOBJS	= matmult_lib.o matmult_gpu1.o matmult_gpu2.o \
-          matmult_gpu3.o matmult_gpu4.o
+          matmult_gpu3.o matmult_gpu4.o matmult_gpulib.o
 
 OPT	= -g -O3
 PIC = -fpic
